# immuni-backend-exposure-ingestion

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  entrypoint.sh  pyproject.toml  pytest.ini  sonar-project.properties
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
docker/: docker-compose.yml
immuni_exposure_ingestion/: celery.py  sanic.py
immuni_exposure_ingestion/apis/: ingestion.py
immuni_exposure_ingestion/core/: config.py  exceptions.py  managers.py
immuni_exposure_ingestion/helpers/: api.py  cun.py  cun_external_service.py  exposure_data.py  external_signature.py  his_external_service.py  lock.py  otp_internal_service.py  risk_level.py  temporary_exposure_key.py  upload.py
immuni_exposure_ingestion/models/: swagger.py  upload.py  upload_eu.py  validators.py
immuni_exposure_ingestion/monitoring/: api.py  celery.py  helpers.py
immuni_exposure_ingestion/protobuf/helpers/: generate_zip.py
immuni_exposure_ingestion/protobuf/models/: schema_v1_pb2.py  schema_v1_pb2.pyi
immuni_exposure_ingestion/protobuf/schemas/: schema_v1.proto
immuni_exposure_ingestion/tasks/: delete_old_data.py  process_uploads.py  process_uploads_eu.py
tests/: conftest.py  test_delete_data.py  test_external_signature.py  test_his_external_service.py  test_managers.py  test_otp_internal_service.py  test_process_uploads.py  test_process_uploads_eu.py  test_upload.py  test_validators.py
tests/fixtures/: core.py  external_signature.py  his_external_service.py  otp.py  otp_internal_service.py  upload.py
tests/test_helpers/: test_otp.py
